--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   </head>
   <body>
     <header>
-      <nav class="flex justify-between py-7 w-11/12 mx-auto">
+      <nav
+        class="flex justify-between py-7 w-11/12 mx-auto flex-col lg:flex-row items-center"
+      >
         <img src="./Logo.png" class="w-[180px]" alt="" />
         <div class="flex gap-5">
           <input
